--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,11 @@ code {
   align-items: center;
   height: 100vh;
 } */
+.border_map{
+  height: 400px;
+  width: 100%;
+  border:1px solid hsl(0,0%,80%);
+  border-radius:10px;
+  box-shadow:5px 5px hsla(0,0%,0%,0.1);
+  padding:5px;
+}
